add team info and clean up standings

--- a/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.html
+++ b/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.html
@@ -12,7 +12,7 @@
 
 <nav class="navigation-tabs">
   <button class="navigation-tabs__tab" routerLink="./schedule" type="button">
-    Scheduling
+    Schedule
   </button>
   <button class="navigation-tabs__tab" routerLink="./teams" type="button">
     Teams
