--- a/src/app/league-zone/league-teams/league-teams.component.html
+++ b/src/app/league-zone/league-teams/league-teams.component.html
@@ -1,7 +1,12 @@
-<div class="teams-container">
-  @for (team of teams; track team) {
-    <pdz-league-team-card [teamDetails]="team"></pdz-league-team-card>
-  } @empty {
-    <div>No teams added to this division</div>
-  }
+<div class="teams-page">
+  <div class="teams-header">
+    <h1 class="teams-title">League Teams</h1>
+  </div>
+  <div class="teams-container">
+    @for (team of teams; track team) {
+      <pdz-league-team-card [teamDetails]="team"></pdz-league-team-card>
+    } @empty {
+      <div>No teams added to this division</div>
+    }
+  </div>
 </div>
