add sub sign up

--- a/src/app/league-zone/comparison-card/comparison-card.component.html
+++ b/src/app/league-zone/comparison-card/comparison-card.component.html
@@ -13,12 +13,10 @@
   <div class="comparison-header">
     <div class="entity-info-container">
       <div class="entity-logo" [ngClass]="entityLeftLogoClasses">
-        @if (getLogo(entityLeft)) {
-          <img
-            [src]="getLogo(entityLeft)"
-            [alt]="entityLeft.primaryName + ' logo'"
-          />
-        }
+        <img
+          [src]="getLogo(entityLeft)"
+          [alt]="entityLeft.primaryName + ' logo'"
+        />
       </div>
       <div class="entity-info">
         <div class="entity-primary-name">{{ entityLeft.primaryName }}</div>
@@ -63,12 +61,11 @@
         }
       </div>
       <div class="entity-logo" [ngClass]="entityRightLogoClasses">
-        @if (getLogo(entityRight)) {
-          <img
-            [src]="getLogo(entityRight)"
-            [alt]="entityRight.primaryName + ' logo'"
-          />
-        }
+        {{ entityRight.logoUrl }}
+        <img
+          [src]="getLogo(entityRight)"
+          [alt]="entityRight.primaryName + ' logo'"
+        />
       </div>
     </div>
   </div>
