--- a/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.html
+++ b/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.html
@@ -27,8 +27,9 @@
     Draft
   </button>
 </nav>
-<!-- <div class="widget-container">
-  @if(team){
+<div class="widget-container">
+  Coming soon! All the info you need, at a glance!
+  <!-- @if(team){
   <div class="widget row-span-2">
     <div class="widget-title">Deimos Deoxys</div>
     <div class="widget-body">
@@ -65,5 +66,5 @@
         <pdz-chat [roomId]="tournamentId"></pdz-chat>
       }
     </div>
-  </div>
-</div> -->
+  </div> -->
+</div>
